--- a/src/simple_robot_description/CMakeLists.txt
+++ b/src/simple_robot_description/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 2.8.3)
-project(diff_drive_rviz)
+project(simple_robot_description)
 
 find_package(catkin REQUIRED)
 
